refactor: fix a typo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello, it is my resume. </title>
+    <title>Hello, it is my resume.</title>
 </head>
 
 
@@ -22,9 +22,9 @@
         <section class="contract">
             <h3>Contact Info:</h3>
             <ul>
-                <li> <strong class="phone">Ph.: </strong> +7912--510-- </li>
-                <li> <strong>Email: </strong>Zuhio76@gmail.com </li>
-                <li> <strong>Skype: </strong> helion47 </li>
+                <li> <strong class="phone">Ph.:</strong> +7912--510-- </li>
+                <li> <strong>Email:</strong>Zuhio76@gmail.com </li>
+                <li> <strong>Skype:</strong> helion47 </li>
             </ul>
         </section>
     </header>
@@ -45,7 +45,7 @@
             <ul>
                 <li>Programming Languages:
                     <ol>
-                        <li>​Javascript(ES5/ES6)</li>
+                        <li>Javascript(ES5/ES6)</li>
                         <li>HTML5</li>
                         <li>CSS3</li>
                     </ol>
@@ -71,7 +71,7 @@
                 <li> <a href="https://praktikum.yandex.ru/profile/frontend-developer/">Yandex praktikum</a></li>
                 <li> <a href="https://ru.hexlet.io">Hexlet</a></li>
                 <li> <a href="https://learn.javascript.ru/">Modern JavaScript tutorial</a></li>
-                <li> Training videos on <a href="">Youtube</a> </li>
+                <li> Training videos on <a href="https://www.youtube.com/">Youtube</a> </li>
             </ol>
             <hr>
         </section>
